Fix image cropping and resizing on window resize.

--- a/Source/Chronozoom.UI/css/cz.css
+++ b/Source/Chronozoom.UI/css/cz.css
@@ -457,6 +457,8 @@ input.error {
   height: 100%;
 }
 .tile-photo {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   position: absolute;
   width: 100%;
