--- a/Source/Chronozoom.UI/css/start-page.less
+++ b/Source/Chronozoom.UI/css/start-page.less
@@ -91,7 +91,7 @@
 }
 
 .tile-photo {
-    box-sizing: border-box;
+    .box-sizing;
     position: absolute;
     width: 100%;
     height: 100%;
